<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#689F38"
    android:backgroundTint="#A1DC6E"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_numero"
        android:layout_width="261dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#A66506"
        android:ems="10"
        android:hint="@string/et_numero"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="210dp"
        android:layout_height="34dp"
        android:layout_marginTop="52dp"
        android:background="#9C27B0"
        android:text="@string/tv1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="#C10B0B"
        android:onClick="calcular"
        android:text="@string/bt1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toEndOf="@+id/tv_datos"
        app:layout_constraintTop_toBottomOf="@+id/et_numero" />

    <TextView
        android:id="@+id/tv_datos"
        android:layout_width="168dp"
        android:layout_height="265dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="16dp"
        android:background="#FFEB3B"
        android:text="@string/tv_datos"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_numero" />

    <Button
        android:id="@+id/button2"
        android:layout_width="109dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#05970B"
        android:onClick="guardar"
        android:text="@string/bt2"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="120dp"
        android:layout_height="92dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre">

        <RadioButton
            android:id="@+id/rbSD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#1DCDDF"
            android:buttonTint="#4112B3"
            android:text="@string/rbSD" />

        <RadioButton
            android:id="@+id/rbIN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#E60C62"
            android:text="@string/rbIn" />

    </RadioGroup>

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="232dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="104dp"
        android:backgroundTint="#E8400B"
        android:ems="10"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_datos" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#1530CA"
        android:text="@string/bt3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toEndOf="@+id/tv_datos"
        app:layout_constraintTop_toBottomOf="@+id/bt1" />

</androidx.constraintlayout.widget.ConstraintLayout>